fixed overlapping in mobile devices

--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ body { background-color: #36393f;
    .grid-container{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    grid-template-rows: 600px ;
+    grid-template-rows: 700px ;
     
     grid-template-areas:
     'a a b'
@@ -79,8 +79,7 @@ body { background-color: #36393f;
    .item1{ grid-area: a;}
    .item2{grid-area: b;
     position: relative;
-   left: 20px;
-    bottom: 10px;
+   margin: 0 auto;
 }
 .container{
 display: inline-grid;
@@ -132,4 +131,5 @@ text-align: center;
 
 
 }
+p{ text-align: center;}
         
